--- a/css/style.css
+++ b/css/style.css
@@ -134,9 +134,15 @@ button i {
     font-weight: 400;
 }
 
+.chicken {
+    font-family: Lato;
+    font-style: normal;
+    font-weight: 400;
+}
+
 .recipePic {
     background-color: #C7BEBE;
-    width: 380px;
+    width: 325px;
     height: 178px;
     border-radius: 5px 5px 0px 0px;
 }
@@ -148,7 +154,7 @@ button i {
 
 .details i {
     line-height: 12px;
-    padding: 0 1em 0 8em;
+    /*padding: 0 1em 0 8em;*/
 }
 
 .moreDetails {
